Index and show pages completed

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "express-react-views": "^0.11.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "nodemonConfig":{
+    "ext": "js,json,jsx,css"
   }
 }
